# splatflow

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml  visualize_cameras.py
src/splatflow/: app.tcss  colmap_utils.py  config.py  initialise.py  main.py
src/splatflow/components/: delete_dialog.py  delete_dialog.tcss  viewer_dialog.py  viewer_dialog.tcss
src/splatflow/process/: colmap_utils.py  hloc.py  save_splatflow_data.py  test_process.py
src/splatflow/scripts/: process.py  train.py  view_model.py
src/splatflow/tabs/: flow_tab.py  models.py  queue.py
src/splatflow/tabs/datasets/: dataset.py  dataset_list_item.py  datasets.py  datasets.tcss  process_dialog.py  scanner.py  train_dialog.py
src/splatflow/tabs/models/: model.py  models.py  models.tcss  scanner.py
src/splatflow/tabs/queue/: queue.py  queue.tcss
src/splatflow/train/: colmap.py  gsplat_simple_trainer.py  gsplat_viewer.py  init_points.py  math_utils.py
src/splatflow/worker/: queue_manager.py
