[project]
name = "splatflow"
version = "0.1.0"
description = "A terminal-based tool for managing 3D Gaussian Splatting workflows. Run structure-from-motion (COLMAP/GLOMAP) and gsplat training with smart caching - only reruns what changed."
authors = [{ name = "Martin Piala", email = "pialamar@gmail.com" }]
license = { text = "GNU AFFERO GENERAL PUBLIC LICENSE" }
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
  "torch (>=2.7.1,<2.8.0)",
  "torchvision (>=0.22.0,<0.23.0)", # Compatible with torch 2.7.x
  "textual (>=6.2.1,<7.0.0)",
  "textual-dev (>=1.7.0,<2.0.0)",
  "pydantic (>=2.11.9,<3.0.0)",
  "typer (>=0.19.2,<0.20.0)",
  "imageio (>=2.37.0,<3.0.0)",
  "tyro (>=0.9.33,<0.10.0)",
  "pyyaml (>=6.0.3,<7.0.0)",
  "viser (>=1.0.13,<2.0.0)",
  "gsplat (>=1.5.3,<2.0.0)",
  "nerfview (>=0.1.3,<0.2.0)",
  "scikit-learn (>=1.7.2,<2.0.0)",
  "tensorly (>=0.9.0,<0.10.0)",
  "plyfile (>=1.1.2,<2.0.0)",
  "splines (>=0.3.3,<0.4.0)",
  "plotly (>=6.3.1,<7.0.0)",
]

[tool.poetry]

[tool.poetry.scripts]
splatflow = "splatflow.main:main"
process = "splatflow.scripts.process:main"
train = "splatflow.scripts.train:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.2"
pytest-watch = "^4.2.0"
pyright = "^1.1.406"

[tool.ruff]
exclude = ["submodules/**", ".venv", "__pycache__"]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["submodules/Hierarchical-Localization"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
